(feat) all you asked for

--- a/app/index.html
+++ b/app/index.html
@@ -25,48 +25,48 @@
             <button class="game__popup__ok" onclick="refresh()"></button>
         </div>
       <div class="game__field">
-        <div class="game__field__holder">
+        <table class="game__field__holder">
           <div class="stars"></div>
-          <div class="game__field__holder__row">
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-            <div class="cell"></div>
-          </div>
-            <div class="game__field__holder__row">
-              <div class="cell"></div>
-              <div class="cell"></div>
-              <div class="cell"></div>
-              <div class="cell"></div>
-              <div class="cell"></div>
-            </div>
-            <div class="game__field__holder__row">
-              <div class="cell"></div>
-              <div class="cell"></div>
-              <div class="cell"></div>
-              <div class="cell"></div>
-              <div class="cell"></div>
-            </div>
-              <div class="game__field__holder__row">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-              </div>
-                <div class="game__field__holder__row">
-                  <div class="cell"></div>
-                  <div class="cell"></div>
-                  <div class="cell"></div>
-                  <div class="cell"></div>
-                  <div class="cell"></div>
-                </div>
-        </div>
+          <tr class="game__field__holder__row">
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+          </tr>
+            <tr class="game__field__holder__row">
+              <td class="cell"></td>
+              <td class="cell"></td>
+              <td class="cell"></td>
+              <td class="cell"></td>
+              <td class="cell"></td>
+            </tr>
+          <tr class="game__field__holder__row">
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+          </tr>
+          <tr class="game__field__holder__row">
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+          </tr>
+          <tr class="game__field__holder__row">
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+            <td class="cell"></td>
+          </tr>
+        </table>
         <div class="game__field__guess"></div>
         <button class="game__field__retry" onclick="refresh()">START AGAIN</button>
       </div>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./libs/main.js"></script>
 </body>
 </html>
