--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-  <script src="./app/libs/main.js"/>
     <title>Personnel Department</title>
 </head>
 <body>
@@ -45,11 +44,12 @@
     <div class="send">
       <form action="#">
         <label for="lname">Wanna join? Leave your email!</label><br>
-        <input class="email" type="text" id="lname" name="lname" placeholder="example@mail.com"><br><br>
+        <input class="email" type="text" id="lname" name="lname" placeholder="example@mail.com">
         <input class="submit" type="submit" value="Send">
       </form>
     </div>
   </div>
 </main>
 </body>
+<script src="./app/libs/main.js"/>
 </html>
